[package]
name = "proxy"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "proxy"
path = "src/main.rs"

[dependencies]
candid = "0.7.4"
ic-cdk = "0.3.1"
ic-cdk-macros = "0.3.1"
dfn_core = { git="https://github.com/flyq/ic" }
dfn_protobuf = { git="https://github.com/flyq/ic" }
ic-base-types = { git="https://github.com/flyq/ic" }
ledger-canister = { git="https://github.com/flyq/ic" }